@@ -76,6 +76,7 @@ libspectrum_byte* slt_screen
 int slt_screen_level
 
 int zxcf_active
+int zxcf_upload
 libspectrum_byte zxcf_memctl
 size_t zxcf_pages
 libspectrum_byte* zxcf_ram 1
